# path-size

./: .gitattributes  .hlint.yaml  CHANGELOG.md  Makefile  README.md  cabal.profile.project  cabal.project  cabal.project.local  flake.nix  fs-size.cabal  fs-utils.cabal  hie.yaml  path-size.cabal  stack.yaml  stack_nightly.yaml
.github/scripts/: release_linux.sh  release_linux_static.sh  release_osx.sh
.github/workflows/: cabal.yaml  ci.yaml  nix.yaml
app/: Args.hs  Main.hs
app/Args/: TH.hs
bench/common/PathSize/Bench/: Common.hs
bench/common/SafeRm/Bench/: Common.hs
bench/criterion/: Main.hs  baseline_9.2.6_ci.html  baseline_9.4.4.csv  baseline_9.4.4.html  baseline_9.4.4_ci.csv  baseline_9.4.4_ci.html  baseline_9.4.5.csv  baseline_9.4.5.html  baseline_9.6.3.csv  baseline_9.6.3.html  baseline_9.6.5.csv  baseline_9.8.2.csv  baseline_9.8.2.html  baseline_macos-latest_9.2.7_ci.csv  baseline_macos-latest_9.4.4_ci.csv  baseline_macos-latest_9.4.4_ci.html  baseline_ubuntu-latest-9.2.7_ci.csv  baseline_ubuntu-latest-9.4.4_ci.csv  baseline_ubuntu-latest_9.10.1_ci.csv  baseline_ubuntu-latest_9.10.1_ci.html  baseline_ubuntu-latest_9.10.2_ci.csv  baseline_ubuntu-latest_9.10.2_ci.html  baseline_ubuntu-latest_9.12.1_ci.csv  baseline_ubuntu-latest_9.12.1_ci.html  baseline_ubuntu-latest_9.12.2_ci.html  baseline_ubuntu-latest_9.2.7_ci.csv  baseline_ubuntu-latest_9.2.7_ci.html  baseline_ubuntu-latest_9.2.8_ci.csv  baseline_ubuntu-latest_9.2.8_ci.html  baseline_ubuntu-latest_9.4.4_ci.csv  baseline_ubuntu-latest_9.4.4_ci.html  baseline_ubuntu-latest_9.4.5_ci.csv  baseline_ubuntu-latest_9.4.5_ci.html  baseline_ubuntu-latest_9.4.6_ci.csv  baseline_ubuntu-latest_9.4.7_ci.csv  baseline_ubuntu-latest_9.4.7_ci.html  baseline_ubuntu-latest_9.4.8_ci.csv  baseline_ubuntu-latest_9.4.8_ci.html  baseline_ubuntu-latest_9.6.2_ci.csv  baseline_ubuntu-latest_9.6.3_ci.csv  (+7 more)
bench/tasty/: Main.hs  baseline_9.2.6_ci.csv  baseline_9.4.4.csv  baseline_9.4.4_ci.csv  baseline_9.4.5.csv  baseline_9.6.2.csv  baseline_9.6.3.csv  baseline_9.8.2.csv  baseline_9.8.4.csv  baseline_macos-latest_9.2.7_ci.csv  baseline_macos-latest_9.4.4_ci.csv  baseline_ubuntu-latest_9.10.1_ci.csv  baseline_ubuntu-latest_9.12.1_ci.csv  baseline_ubuntu-latest_9.2.7_ci.csv  baseline_ubuntu-latest_9.2.8_ci.csv  baseline_ubuntu-latest_9.4.4_ci.csv  baseline_ubuntu-latest_9.4.5_ci.csv  baseline_ubuntu-latest_9.4.7_ci.csv  baseline_ubuntu-latest_9.4.8_ci.csv  baseline_ubuntu-latest_9.6.3_ci.csv  baseline_ubuntu-latest_9.6.5_ci.csv  baseline_ubuntu-latest_9.8.1_ci.csv  baseline_ubuntu-latest_9.8.2_ci.csv  baseline_ubuntu-latest_9.8.4_ci.csv  baseline_windows-latest_9.2.7_ci.csv
benchmarks/: Main.hs  bench.csv  bench.html
docker/alpine_amd64/: Dockerfile
docs/: PathSize-Data-Config-TH.html  PathSize-Data-Config.html  PathSize-Data-PathData.html  PathSize-Data-PathSizeResult.html  PathSize-Data-PathTree.html  PathSize-Data-SubPathData-Internal.html  PathSize-Data-SubPathData.html  PathSize-Exception.html  PathSize-Utils.html  PathSize.html  doc-index.html  doc-index.json  index.html  path-size.haddock
docs/src/: PathSize.Data.Config.TH.html  PathSize.Data.Config.html  PathSize.Data.PathData.html  PathSize.Data.PathSizeResult.html  PathSize.Data.PathTree.html  PathSize.Data.SubPathData.Internal.html  PathSize.Data.SubPathData.html  PathSize.Exception.html  PathSize.Utils.html  PathSize.html
nix/: stack.nix
profile/: Main.hs  profile_async.prof  profile_pool.prof  profile_sync.prof
profiling/app/: Main.hs  profile_async.prof  profile_pool.prof  profile_sync.prof
profiling/utils/: Main.hs
src/: PathSize.hs
src/Data/Sequence/: NonEmpty.hs
src/Effects/FileSystem/: PathSize.hs
src/FsSize/: PathSize.hs
src/FsSize/Control/: Exception.hs
src/FsSize/Data/: PathSizeConfig.hs  PathSizeData.hs
src/FsUtils/: PathSize.hs  Size.hs
src/FsUtils/Control/: Exception.hs
src/FsUtils/Data/: PathSize.hs  PathSizeConfig.hs  PathSizeData.hs  SizeConfig.hs
src/PathSize/: Data.hs  Exception.hs  Utils.hs
src/PathSize/Data/: Config.hs  PathData.hs  PathSizeResult.hs  PathTree.hs  SubPathData.hs
src/PathSize/Data/Config/: TH.hs
src/PathSize/Data/SubPathData/: Internal.hs
test/functional/: GoldenParams.hs  Main.hs
test/functional/Functional/: PathSize.hs  depth-0.golden  depth-1.golden  files-only.golden  reverse.golden
test/functional/Functional/FsSize/: PathSize.hs  excluded.golden  files-only.golden
test/functional/Functional/FsUtils/: PathSize.hs  all.golden  depth-2.golden  excluded.golden  sizes.golden
test/functional/data/.hidden/: f1
test/functional/data/success/d2/d2/d1/: f1
test/functional/goldens/: calculatesAll_linux.golden  calculatesAll_osx.golden  calculatesAll_windows.golden  calculatesDepth_0_linux.golden  calculatesDepth_0_osx.golden  calculatesDepth_0_windows.golden  calculatesDepth_1_linux.golden  calculatesDepth_1_osx.golden  calculatesDepth_1_windows.golden  calculatesDepth_2_linux.golden  calculatesDepth_2_osx.golden  calculatesDepth_2_windows.golden  calculatesExcluded2_linux.golden  calculatesExcluded2_osx.golden  calculatesExcluded2_windows.golden  calculatesExcluded_linux.golden  calculatesExcluded_osx.golden  calculatesExcluded_windows.golden  calculatesFilesOnly_linux.golden  calculatesFilesOnly_osx.golden  calculatesFilesOnly_windows.golden  calculatesIgnoreDirIntrinsicSize_linux.golden  calculatesIgnoreDirIntrinsicSize_osx.golden  calculatesIgnoreDirIntrinsicSize_windows.golden  calculatesSizes_linux.golden  calculatesSizes_osx.golden  calculatesSizes_windows.golden  testDisplaysTabular_linux.golden  testDisplaysTabular_osx.golden  testDisplaysTabular_windows.golden  testsFailure_linux.golden  testsFailure_osx.golden  testsFailure_windows.golden  testsPartial_linux.golden  testsPartial_osx.golden  testsPartial_windows.golden
test/unit/: Main.hs
test/unit/Unit/PathSize/: Utils.hs
tools/: bench.sh  format.sh  haddock.sh  lint-refactor.sh  lint.sh  profile.sh
