cabal-version:      2.4
name:               fs-utils
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.2.4 || ==9.4.2
copyright:          2022 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/fs-utils/
bug-reports:        https://github.com/tbidne/fs-utils/issues
synopsis:           Template
description:        Template
category:           Template
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/fs-utils

common common-exts
  default-extensions:
    NoFieldSelectors
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    OverloadedLabels
    OverloadedStrings
    TypeFamilies

library
  import:           common-exts
  exposed-modules:
    FsUtils.Control.Exception
    FsUtils.Data.PathSize
    FsUtils.Size

  build-depends:
    , async                 ^>=2.2.4
    , base                  >=4.14.0.0  && <4.18
    , deepseq               ^>=1.4.4.0
    , directory             ^>=1.3.5.0
    , filepath              ^>=1.4.2.1
    , hashable              ^>=1.4.0.2
    , parallel-io           ^>=0.3.5
    , safe-exceptions       ^>=0.1.7.0
    , text                  >=1.2.3.2   && <2.1
    , unordered-containers  ^>=0.2.14.0

  hs-source-dirs:   src
  default-language: GHC2021

executable fs-utils
  import:           common-exts
  main-is:          Main.hs
  build-depends:
    , base
    , fs-utils
    , safe-exceptions
    , unordered-containers

  hs-source-dirs:   app
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: GHC2021

benchmark benchmarks
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring       >=0.10.12 && <0.12
    , directory
    , env-guard        ^>=0.2
    , filepath
    , fs-utils
    , safe-exceptions
    , tasty-bench      ^>=0.3

  hs-source-dirs:   benchmarks
  default-language: GHC2021
