cabal-version:      2.4
name:               path-size
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.2.8 || ==9.4.7 || ==9.6.3 || ==9.8.1
copyright:          2022-2024 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/path-size/
bug-reports:        https://github.com/tbidne/path-size/issues
synopsis:           Utility for reporting file-system sizes.
description:        Utility for reporting file-system sizes.
category:           CLI
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/path-size

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    TypeFamilies

library
  import:           common-lang
  exposed-modules:
    PathSize
    PathSize.Data.Config
    PathSize.Data.Config.TH
    PathSize.Data.PathData
    PathSize.Data.PathSizeResult
    PathSize.Data.PathTree
    PathSize.Data.SubPathData
    PathSize.Data.SubPathData.Internal
    PathSize.Exception
    PathSize.Utils

  build-depends:
    , base                  >=4.16.0.0  && <4.20
    , containers            >=0.6.3.1   && <0.8
    , deepseq               >=1.4.4.0   && <1.6
    , effects-async         ^>=0.1
    , effects-exceptions    ^>=0.1
    , effects-fs            ^>=0.1
    , effects-unix-compat   ^>=0.1
    , filepath              >=1.4.2.1   && <1.6
    , nonempty-containers   >=0.3.4.2   && <0.4
    , optics-core           ^>=0.4
    , si-bytes              ^>=0.1
    , smart-math            ^>=0.1
    , text                  >=1.2.3.2   && <2.2
    , unix-compat           >=0.6       && <0.8
    , unordered-containers  ^>=0.2.14.0

  hs-source-dirs:   src
  default-language: GHC2021

executable path-size
  import:           common-lang
  main-is:          Main.hs
  other-modules:
    Args
    Paths_path_size

  autogen-modules:  Paths_path_size
  build-depends:
    , base
    , effects-fs
    , effects-optparse      ^>=0.1
    , optics-core
    , optics-th             ^>=0.4
    , optparse-applicative  >=0.16.1.0 && <0.19
    , path-size
    , smart-math
    , text
    , unordered-containers

  hs-source-dirs:   app
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: GHC2021

test-suite unit
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Unit.PathSize.Utils
  build-depends:
    , base
    , effects-fs
    , hedgehog        >=1.0.2   && <1.5
    , path-size
    , tasty           >=1.1.0.3 && <1.6
    , tasty-hedgehog  >=1.2.0.0 && <1.5

  hs-source-dirs:   test/unit
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: GHC2021

test-suite functional
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Functional.PathSize
  build-depends:
    , base
    , containers
    , effects-async
    , effects-exceptions
    , effects-fs
    , effects-unix-compat
    , nonempty-containers
    , path-size
    , tasty
    , tasty-hunit           >=0.9 && <0.11
    , text
    , unordered-containers

  hs-source-dirs:   test/functional
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: GHC2021

library bench-common
  import:           common-lang
  exposed-modules:  PathSize.Bench.Common
  build-depends:
    , base
    , deepseq
    , effects-exceptions
    , effects-fs
    , env-guard             ^>=0.2
    , nonempty-containers
    , path-size
    , smart-math
    , unordered-containers

  hs-source-dirs:   bench/common
  default-language: GHC2021

benchmark bench-criterion
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , bench-common
    , criterion           ^>=1.6.0.0
    , effects-exceptions
    , path-size

  hs-source-dirs:   bench/criterion
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: GHC2021

benchmark bench-tasty
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , bench-common
    , effects-exceptions
    , path-size
    , tasty-bench         ^>=0.3

  hs-source-dirs:   bench/tasty
  default-language: GHC2021
