cabal-version:      2.4
name:               path-size
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==9.2.8 || ==9.4.8 || ==9.6.5 || ==9.8.2 || ==9.10.1

copyright:          2022-2024 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/path-size/
bug-reports:        https://github.com/tbidne/path-size/issues
synopsis:           Utility for reporting file-system sizes.
description:        Utility for reporting file-system sizes.
category:           CLI
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/path-size

-- TODO: [OsString upgrade]
--
-- Once we can build with nix and filepath >= 1.5 (GHC 9.10+), unconditionally
-- require filepath >= 1.5. Remove the os-string flag and corresponding cpp.

flag os-string
  description: Use the new os-string package
  default:     False
  manual:      False

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    MagicHash
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    TypeFamilies
    UnboxedTuples

  if os(windows)
    cpp-options: -DWINDOWS

  elif os(osx)
    cpp-options: -DOSX -DPOSIX

  else
    cpp-options: -DLINUX -DPOSIX

  if flag(os-string)
    cpp-options: -DOS_STRING

  default-language:   GHC2021

library
  import:          common-lang
  exposed-modules:
    PathSize
    PathSize.Data.Config
    PathSize.Data.PathData
    PathSize.Data.PathSizeResult
    PathSize.Data.PathTree
    PathSize.Data.SubPathData
    PathSize.Data.SubPathData.Internal
    PathSize.Exception
    PathSize.Utils

  build-depends:
    , base                  >=4.16.0.0  && <4.21
    , containers            >=0.6.3.1   && <0.8
    , deepseq               >=1.4.4.0   && <1.6
    , effects-async         ^>=0.1
    , effects-exceptions    ^>=0.1
    , effects-fs            ^>=0.1
    , nonempty-containers   >=0.3.4.2   && <0.4
    , optics-core           ^>=0.4
    , si-bytes              ^>=0.1
    , smart-math            ^>=0.1
    , text                  >=1.2.3.2   && <2.2
    , unix-compat           >=0.6       && <0.8
    , unordered-containers  ^>=0.2.14.0

  if !os(windows)
    -- See TODO: [OsString upgrade]
    if flag(os-string)
      build-depends:
        , effects-unix  ^>=0.1
        , filepath      >=1.5.2.0 && <1.6
        , os-string     ^>=2.0.0

    else
      build-depends:
        , effects-unix  ^>=0.1
        , filepath      >=1.4.2.1 && <1.5

  else
    build-depends:
      , effects-unix-compat  ^>=0.1
      , filepath             >=1.4.2.1 && <1.6

  hs-source-dirs:  src

executable path-size
  import:          common-lang
  main-is:         Main.hs
  other-modules:
    Args
    Paths_path_size

  autogen-modules: Paths_path_size
  build-depends:
    , base
    , effects-fs-utils      ^>=0.1
    , effects-optparse      ^>=0.1
    , optparse-applicative  >=0.16.1.0 && <0.19
    , path-size
    , smart-math
    , text
    , unordered-containers

  hs-source-dirs:  app
  ghc-options:     -threaded -with-rtsopts=-N

executable profile
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , bench-common
    , deepseq
    , nonempty-containers
    , path-size

  hs-source-dirs: profile

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Unit.PathSize.Utils
  build-depends:
    , base
    , effects-fs-utils
    , hedgehog          >=1.0.2   && <1.5
    , path-size
    , tasty             >=1.1.0.3 && <1.6
    , tasty-hedgehog    >=1.2.0.0 && <1.5

  hs-source-dirs: test/unit
  ghc-options:    -threaded -with-rtsopts=-N

test-suite functional
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Functional.PathSize
    GoldenParams

  build-depends:
    , base
    , effects-async
    , effects-exceptions
    , effects-fs
    , nonempty-containers
    , path-size
    , tasty
    , tasty-golden          ^>=2.3.1.1
    , text
    , unordered-containers

  if !os(windows)
    -- See TODO: [OsString upgrade]
    if flag(os-string)
      build-depends:
        , effects-unix
        , os-string

    else
      build-depends:
        , effects-unix
        , filepath

  else
    build-depends: effects-unix-compat

  hs-source-dirs: test/functional
  ghc-options:    -threaded -with-rtsopts=-N

library bench-common
  import:          common-lang
  exposed-modules: PathSize.Bench.Common
  build-depends:
    , base
    , deepseq
    , effects-exceptions
    , effects-fs
    , env-guard             ^>=0.2
    , nonempty-containers
    , path-size
    , smart-math
    , unordered-containers

  hs-source-dirs:  bench/common

benchmark bench-criterion
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , bench-common
    , criterion           ^>=1.6.0.0
    , effects-exceptions
    , path-size

  hs-source-dirs: bench/criterion
  ghc-options:    -threaded -with-rtsopts=-N

benchmark bench-tasty
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , bench-common
    , effects-exceptions
    , path-size
    , tasty-bench         ^>=0.3

  hs-source-dirs: bench/tasty
