cabal-version:      2.4
name:               path-size
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1
   || ==9.12.1

copyright:          2022-2025 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/path-size/
bug-reports:        https://github.com/tbidne/path-size/issues
synopsis:           Utility for reporting file-system sizes.
description:        Path-size finds large files on the file-system.
category:           CLI
extra-source-files: README.md
extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/path-size

common common-lang
  default-extensions:
    ApplicativeDo
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    MagicHash
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    TypeFamilies
    UnboxedTuples

  if os(windows)
    cpp-options: -DWINDOWS

  elif os(osx)
    cpp-options: -DOSX -DPOSIX

  else
    cpp-options: -DLINUX -DPOSIX

  default-language:   GHC2021

library
  import:          common-lang
  exposed-modules:
    PathSize
    PathSize.Data.Config
    PathSize.Data.PathData
    PathSize.Data.PathSizeResult
    PathSize.Data.PathTree
    PathSize.Data.SubPathData
    PathSize.Data.SubPathData.Internal
    PathSize.Exception
    PathSize.Utils

  build-depends:
    , base                 >=4.16.0.0 && <4.22
    , containers           >=0.6.3.1  && <0.8
    , deepseq              >=1.4.4.0  && <1.6
    , effects-async        ^>=0.1
    , effects-fs           ^>=0.1
    , exception-utils      ^>=0.1
    , exceptions           ^>=0.10.4
    , filepath             >=1.5.2.0  && <1.6
    , Glob                 ^>=0.10.2
    , nonempty-containers  >=0.3.4.2  && <0.4
    , optics-core          ^>=0.4
    , si-bytes             ^>=0.1
    , smart-math           ^>=0.1
    , text                 >=1.2.3.2  && <2.2
    , text-builder-linear  ^>=0.1
    , unix-compat          >=0.6      && <0.8

  if !os(windows)
    build-depends:
      , bytestring    >=0.10.12.0 && <0.13
      , effects-unix  ^>=0.1
      , os-string     ^>=2.0.0

  else
    build-depends: effects-unix-compat ^>=0.1

  hs-source-dirs:  src

executable path-size
  import:          common-lang
  main-is:         Main.hs
  other-modules:
    Args
    Args.TH
    Paths_path_size

  autogen-modules: Paths_path_size
  build-depends:
    , base
    , effects-optparse      ^>=0.1
    , fs-utils              ^>=0.1
    , gitrev-typed          ^>=0.1
    , Glob
    , optparse-applicative  ^>=0.19
    , os-string
    , path-size
    , smart-math
    , template-haskell      >=2.17.0.0 && <2.24
    , text
    , time                  >=1.9.3    && <1.15

  hs-source-dirs:  app
  ghc-options:     -threaded -with-rtsopts=-N

executable profile-utils
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , bench-common
    , fs-utils

  hs-source-dirs: profiling/utils

executable profile
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , deepseq
    , fs-utils
    , nonempty-containers
    , path-size

  hs-source-dirs: profiling/app

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Unit.PathSize.Utils
  build-depends:
    , base
    , fs-utils
    , hedgehog        >=1.0.2   && <1.6
    , path-size
    , tasty           >=1.1.0.3 && <1.6
    , tasty-hedgehog  >=1.2.0.0 && <1.5

  hs-source-dirs: test/unit
  ghc-options:    -threaded -with-rtsopts=-N

test-suite functional
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Functional.PathSize
    GoldenParams

  build-depends:
    , base
    , effects-async
    , effects-fs
    , exception-utils
    , exceptions
    , Glob
    , nonempty-containers
    , path-size
    , tasty
    , tasty-golden         ^>=2.3.1.1
    , text

  if !os(windows)
    build-depends:
      , effects-unix
      , os-string

  else
    build-depends: effects-unix-compat

  hs-source-dirs: test/functional
  ghc-options:    -threaded -with-rtsopts=-N

library bench-common
  import:          common-lang
  exposed-modules: PathSize.Bench.Common
  build-depends:
    , base
    , deepseq
    , effects-fs
    , env-guard            ^>=0.2
    , exceptions
    , nonempty-containers
    , path-size
    , smart-math

  hs-source-dirs:  bench/common

benchmark bench-criterion
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , bench-common
    , criterion     ^>=1.6.0.0
    , fs-utils
    , path-size

  hs-source-dirs: bench/criterion
  ghc-options:    -threaded -with-rtsopts=-N

benchmark bench-tasty
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , bench-common
    , fs-utils
    , path-size
    , tasty-bench   >=0.3 && <0.5

  hs-source-dirs: bench/tasty
